--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -123,8 +123,7 @@ jobs:
   exercises:
     name: Exercises
     # Execute the CI on the course's runners
-    runs-on:
-      group: runners_v1
+    runs-on: ubuntu-latest
 
     defaults:
       run:
